# monlite

./: .gitignore  .prettierignore  ASSESSMENT.md  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
bench/: bench.mjs
demo/: index.html  package.json  vite.config.ts
docs/: BENCHMARKS.md  FORMAT.md  ROADMAP.md  SYNC.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/: README.md  agent-memory.mjs  harness.mjs  joins.mjs  notes.mjs  package-lock.json  package.json  sync.mjs  wasm.mjs
python/: README.md  pyproject.toml
python/src/monlite/: __init__.py  core.py  cron.py  fts.py  kv.py  queue.py  vector.py
python/tests/: test_changefeed.py  test_core.py  test_core_ops.py  test_cron.py  test_fts.py  test_interop.py  test_interop_features.py  test_kv.py  test_kv_features.py  test_queue.py  test_vector.py
scripts/: guard-publish.cjs
src/: auto-index.ts  collection.ts  db.ts  errors.ts  heartbeat.ts  id.ts  index.ts  plugin.ts  reactive.ts  types.ts
tests/: afterwrite-atomic.test.ts  aggregate.test.ts  autoindex.test.ts  cas-cross-process.test.ts  changefeed.test.ts  crash.test.ts  crud.test.ts  distinct.test.ts  driver.test.ts  durability.test.ts  elemmatch.test.ts  encryption.test.ts  hardening.test.ts  harness-core.test.ts  heartbeat.test.ts  helper.ts  large-dataset.test.ts  limits.test.ts  lookup.test.ts  migrate.test.ts  mongo-ops.test.ts  observability.test.ts  postgres-engine.test.ts  property.test.ts  raw.test.ts  regex.test.ts  scale.test.ts  (+10 more)
(+61 files in other folders)
